--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,10 @@ jobs:
 
             - run: python3 craft.py
 
+            - run: |
+                python3 verify.py >> version.txt
+                echo '```'  >> version.txt
+
             - name: Create Release
               uses: softprops/action-gh-release@v1
               env:
