--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -138,4 +138,10 @@
     "terminal.integrated.automationProfile.linux": {
         "path": "zsh",
     },
+    "files.associations": {
+        "*.nuclei": "yaml"
+    },
+    "yaml.schemas": {
+        "https://raw.githubusercontent.com/projectdiscovery/nuclei/main/nuclei-jsonschema.json": "*.nuclei"
+    },
 }
