--- a/.vscode/msfconsole.rc
+++ b/.vscode/msfconsole.rc
@@ -1,4 +1,4 @@
-set Prompt [Knight Operation Console]
-set MeterpreterPrompt [Knight Enemy]
+set Prompt [Operator Console]
+set MeterpreterPrompt [Meterpreter Beacon]
 
 # 
