update: change code to vim in edit the etc hosts by default

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -50,7 +50,7 @@
             "detail": "edit /etc/hosts task",
             "command": [
                 "sudo",
-                "'${execPath}'",
+                "vim",
                 "/etc/hosts"
             ],
             "isBackground": false,
