update: workflow file for debugging

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
 
       - run: |
           python3 ./releaser.py > version.txt
+          cat version.txt
 
       - name: Create Release
         uses: softprops/action-gh-release@v1
