--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,11 @@ jobs:
       - run: python3 craft.py
 
       - run: |
+          chmod +x ./gitcmd.sh
+          ./gitcmd.sh
+          echo "Begin Creating Release..."
           python3 ./releaser.py > version.txt
+          echo "Create successful!"
           cat version.txt
 
       - name: Create Release
